[project]
name = "networking-tools"
version = "0.1.0"
description = "A Python package for networking tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [ { name = "Your Name" } ]

[project.urls]
"Homepage" = "https://example.com"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
