[project]
name = "netforge"
version = "0.1.0"
description = "A network automation and troubleshooting toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [ { name = "Oluwafemi" } ]

[project.urls]
"Homepage" = "https://github.com/oluwafemi5059/NetForge"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"